# AskMyDocs

./: .gitignore  README.md
backend/: main.py  pyproject.toml  temp_girlfriend_cheatsheet - Sheet1.csv
backend/api/: api_chat.py  api_embedding_to_pinecone.py
backend/core/: chat.py  embedding_to_pinecone.py
backend/utils/: embedding_model.py  llm.py  query_pinecone.py  test.py  testllm.py
data/input_file/: input.csv
